--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,25 +1,67 @@
-body{
-    background-color: #ffffff;
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: black;
+  padding: 12px 10%;
 }
 
-.navbar{
-    display: block;
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Roboto', sans-serif;
+.header h1 {
+  font-size: 36px;
+  font-weight: 700;
+  color: #ac5a5a;
 }
 
-.nav-item{
-    display: inline-block;
-    margin-left: 70px;
-}
-.navbar-nav{
-margin: auto;
+.header div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-h1{
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    color: #fff;
+.header div nav {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
+.header div nav a {
+  color: #d8c9c9;
+  font-weight: 700;
+  font-size: 20px;
+  text-decoration: none;
+  padding: 15px;
+}
+
+.header div nav .activeLink {
+  border: 2px #9c6363 solid;
+  border-radius: 5px;
+}
+
+.header div .widget {
+  color: #084622;
+  font-size: 30px;
+}
+
+.boton-ingresar {
+  text-align: center;
+}
+/*# sourceMappingURL=NavBar.css.map */
