acomodando el login

--- a/src/components/UserAuthenticate/UserAutenticate.css
+++ b/src/components/UserAuthenticate/UserAutenticate.css
@@ -7,4 +7,9 @@
 .loguin {
   text-align: center;
 }
+
+#usuario {
+  margin-left: 50%;
+  background-color: #1ee01e;
+}
 /*# sourceMappingURL=UserAutenticate.css.map */
