--- a/src/components/UserAuthenticate/UserAutenticate.scss
+++ b/src/components/UserAuthenticate/UserAutenticate.scss
@@ -1,12 +1,45 @@
-
-
-.boton-ingresar{
+.boton-ingresar {
     background-color: rgb(30, 224, 30);
     color: black;
-    margin-left: 50%;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    align-items: center;
+    margin-left: 46%;
     
-}
-
-.loguin{
+  }
+  
+  .loguin {
     text-align: center;
-}
+  }
+  
+  #ingreso {
+    text-align: center;
+     
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+   
+  
+  }
+  #usuario {
+    text-align: center;
+     
+    
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 15px;
+    margin: 1px;
+   
+  
+  }
